--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,5 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: aqua;
+
+}
+#contener{
+    width: 100%;
+    height: 100vh;
+    background-color:#0088cc62;
 }
