--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,3 +9,9 @@
     height: 100vh;
     background-color:#0088cc62;
 }
+#navbar{
+    width: 100%;
+    height: 100px;
+    background-color:whitesmoke;
+    border-radius: 0px 0px 30px 30px;
+}
