--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,11 +7,89 @@
 #contener{
     width: 100%;
     height: 100vh;
-    background-color:#0088cc62;
+    /* background-color:#0088cc62; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #navbar{
     width: 100%;
     height: 100px;
-    background-color:whitesmoke;
-    border-radius: 0px 0px 30px 30px;
+    background-color: rgba(204, 215, 160, 0.249);
+    /* border-radius: 0px 0px 30px 30px; */
+}
+#chatbox{
+    width: 100%;
+    height: 80%;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+}
+#chat{
+    width: 80%;
+    height: 100%;
+    background-color: rgb(204, 215, 160);
+    border-radius: 30px;
+    background-image: url(/static/data/_\ \(1\).jpeg);
+    white-space: nowrap;
+    background-repeat: no-repeat;
+    overflow-y: auto;
+    overflow-x: hidden;
+   background-size: contain;
+
+
+
+
+}
+#chat::-webkit-scrollbar{
+    display: none;
+}
+
+
+
+
+/* ---------------inputbox---------- */
+#inputbox{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    margin-top: 10px;
+  
+}
+#inputchat{
+    width: 80%;
+    height: 60%;
+    background-color: rgba(204, 215, 160, 0.369);
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    padding: 0px 2px;
+    align-items: center;
+    gap: 20px;
+}
+#msginput{
+    width: 90%;
+    height: 100%;
+    outline: none;
+    border: transparent;
+}
+#msginputbox{
+    width: 70%;
+    height: 70%;
+    border-radius: 30px;
+    border: transparent;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+}
+.add, .mic, .sticky, .send{
+    font-size: 27px;
+    color: rgb(0, 0, 0);
+    outline: none;
+    border: transparent;
 }
