--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,7 +32,6 @@
     height: 100%;
     background-color: rgb(204, 215, 160);
     border-radius: 30px;
-    /* background-image: url(/static/data/_\ \(1\).jpeg); */
     white-space: nowrap;
     background-repeat: no-repeat;
     overflow-y: auto;
@@ -50,7 +49,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 0px 100px;
+    padding: 0px 10%;
     margin-top: 50px;
 }
 .msgrigt{
@@ -59,7 +58,7 @@
     display: flex;
     justify-content: end;
     align-items: center;
-    padding: 0px 100px;
+    padding: 0px 10%;
     margin-top: 50px;
 }
 #msg{
@@ -68,7 +67,7 @@
     padding: 10px;
     border-radius: 20px;
     font-family: monospace;
-    font-size: 17px;
+    font-size: 90%;
 }
 .a{
     width: 50%;
@@ -87,23 +86,18 @@
     margin-top: 10px;
   
 }
-#inputchat{
+#inpuform{
     width: 80%;
     height: 60%;
     background-color: rgba(204, 215, 160, 0.369);
     border-radius: 30px;
     display: flex;
     justify-content: center;
-    padding: 0px 2px;
+    padding: 0px 5px;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
 }
-#msginput{
-    width: 90%;
-    height: 100%;
-    outline: none;
-    border: transparent;
-}
+
 #msginputbox{
     width: 70%;
     height: 70%;
@@ -114,8 +108,15 @@
     align-items: center;
     background-color: rgb(255, 255, 255);
 }
+#msginput{
+    width: 90%;
+    height: 100%;
+    outline: none;
+    background-color: transparent;
+    border: transparent;
+}
 .add, .mic, .sticky, .send{
-    font-size: 27px;
+    font-size: 25px;
     color: rgb(0, 0, 0);
     outline: none;
     border: transparent;
