--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 0px 10%;
+    padding: 0px 5%;
     margin-top: 50px;
 }
 .msgrigt{
@@ -58,7 +58,7 @@
     display: flex;
     justify-content: end;
     align-items: center;
-    padding: 0px 10%;
+    padding: 0px 5%;
     margin-top: 50px;
 }
 #msg{
@@ -66,13 +66,8 @@
     color: rgb(255, 255, 255);
     padding: 10px;
     border-radius: 20px;
-    font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
     font-size: 90%;
-}
-.a{
-    width: 50%;
-    height: 1000px;
-    background-color: brown;
 }
 
 
