--- a/static/css/media.css
+++ b/static/css/media.css
@@ -1,9 +1,15 @@
-@media (max-width:500px) {
-
+@media (max-width:600px) {
+    #chatbox{
+        
+        margin-top: 0px;}
     #chat{
         width: 100%;
         height: 100%;
         border-radius: 0px;
+    }
+    .msgleft , .msgrigt{
+        padding: 0px 5%;
+        margin-top: 20px;
     }
     #inpuform{
         width: 100%;
