--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-
+  {% load static %}
+  {% load custom_filters %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="/static/css/main.css">
-  <link rel="stylesheet" href="/static/css/media.css">
+  <link rel="stylesheet" href="{%static  'css/main.css' %}">
+  <link rel="stylesheet" href="{%static  'css/media.css' %}">
   <title>U N V O | </title>
 
 
@@ -20,54 +21,34 @@
   <section id="contener">
     <nav id="navbar">
     </nav>
-
     <!-- --------------chat box-------------->
     <section id="chatbox">
       <div id="chat">
-
-        <div class="msgleft"> <code id="msg">hii</code></div>
-        <div class="msgrigt"><code id="msg">helo</code></div>
-        <div class="msgleft"> <code id="msg">samsun</code></div>
-        <div class="msgrigt"><code id="msg">i apd 14 pro max</code></div>
-        <div class="msgleft"> <code id="msg">swagat</code></div>
-        <div class="msgrigt"><code id="msg">binaya hota</code></div>
-        <div class="msgleft"> <code id="msg">dilka dariya</code></div>
-        <div class="msgrigt"><code id="msg">mere mehebub</code></div>
-        <div class="msgleft"> <code id="msg">kayamata ho gi</code></div>
-        <div class="msgrigt"><code id="msg">binaya hota</code></div>
-        <div class="msgleft"> <code id="msg">dilka dariya</code></div>
-        <div class="msgrigt"><code id="msg">mere mehebub</code></div>
-        <div class="msgleft"> <code id="msg">kayamata ho gi</code></div>
-        
-
-
-
+          {% if context %}
+              {% for message in context %}
+                  {% if message.mid|modulo:2 == 0 %}
+                      <div class="msgrigt"><div id="msg">{{ message.message }}</div></div>
+                  {% else %}
+                      <div class="msgleft"> <div id="msg">{{ message.message }}</div></div>       
+                  {% endif %}
+              {% endfor %}
+          {% endif %}
       </div>
-    </section>
-
-
-
+  </section>
+  
     <!-- inputbox---------------------  -->
-
     <section id="inputbox">
-
-      <form action="sentmessage" id="inpuform">
+      <form action="sentmessage" id="inpuform" method="post">
         {% csrf_token %}
         <div class="add"><i class="fa-solid fa-paperclip"></i></div>
-
           <div id="msginputbox">
-          <input type="text" placeholder="Messages" id="msginput" name="messagesent">
-
+            <input type="text" placeholder="Messages" id="msginput" name="messagesent">
           <div class="sticky"><i class='bx bx-sticker'></i></div>
         </div>
-
         <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
         <div class="mic"><i class='bx bx-microphone'></i></div>
       </form>
-
     </section>
-
-
   </section>
 </body>
 
