--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,7 +64,7 @@
 #msg{
     background-color: black;
     color: rgb(255, 255, 255);
-    padding: 10px;
+    padding: 10px 5px;
     border-radius: 20px;
   font-family: 'Courier New', Courier, monospace;
     font-size: 90%;
