--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="{%static  'css/main.css' %}">
   <link rel="stylesheet" href="{%static  'css/media.css' %}">
-  <title>U N V O | </title>
+  <title>U N V O | Unknown Convo</title>
 
 
 </head>
